--- a/admin/index.html
+++ b/admin/index.html
@@ -153,7 +153,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center warning">Pending payment</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -167,7 +167,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center">Pending</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -181,7 +181,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center info">In Progress</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -195,7 +195,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center success">Complete</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -209,7 +209,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center warning">Pending payment</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -223,7 +223,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center">Pending</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -237,7 +237,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center">Pending</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -251,7 +251,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center">Pending</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -265,7 +265,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center">Pending</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
@@ -279,7 +279,7 @@
                   <td class="text-center">$100</td>
                   <td class="text-center">Pending</td>
                   <td class="text-center">
-                    <i class="fa-regular fa-eye text-color-red"></i> 
+                    <a href="order-detail.html"><i class="fa-regular fa-eye text-color-red"></i></a> 
                     <i class="fa-regular fa-trash-can"></i> 
                     <img src="../public/image/avatar.png" width="20px" alt="">
                   </td>
